<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType=
                "textAutoComplete|textCapWords|textPersonName"/>

        <TextView
            android:id="@+id/toppings_header"
            style="@style/HeaderTextStyle"
            android:text="@string/toppings_text" />

        <CheckBox
            android:id="@+id/whipped_cream_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/whippedCream_text"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/chocolate_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quantity_header"
            style="@style/HeaderTextStyle"
            android:text="@string/quantity_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dec_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/buttonTextColor"
                android:onClick="decrement"
                android:text="@string/decrement_button" />

            <TextView
                android:id="@+id/quantity_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/quantity_num"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/incr_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/buttonTextColor"
                android:onClick="increment"
                android:text="@string/increment_button" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/buttonTextColor"
            android:onClick="submitOrder"
            android:text="@string/order_button" />

    </LinearLayout>

</ScrollView>